Initial commit with updated sound paths

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@ button:hover {
     <div id="prompt">Click the gun to spin!</div>
     <div id="countdown"></div>
   </div>
-  <audio id="spinSound" src="C:/Truth-Dare/revolver-spin-96947.mp3"></audio>
-  <audio id="shotSound" src="C:/Truth-Dare/single-pistol-gunshot-33-37187.mp3"></audio>
+  <audio id="spinSound" src="sounds/revolver-spin-96947.mp3"></audio>
+  <audio id="shotSound" src="sounds/single-pistol-gunshot-33-37187.mp3"></audio>
   
   <script>
     let players = [];
